--- a/view/src/slideshow.css
+++ b/view/src/slideshow.css
@@ -18,7 +18,7 @@
     z-index: 12;
     position: absolute;
     left: 0;
-    top: 100px;
+    top: 0px;
     width: 100%;
     text-align: center;
     font-size: 16px;
@@ -29,6 +29,13 @@
     -webkit-transform: translateY(-30px);
             transform: translateY(-30px);
     opacity: 0;
+
+    display: table;
+    margin: 0px auto 0px auto;
+    width: 100%;
+    padding:25px;
+    text-align: center;
+    background-color: rgba(90, 83, 119, 0.75);
   }
   .slider.s--ready .slider__top-heading {
     -webkit-transform: translateY(0);
@@ -71,10 +78,10 @@
     display: table;
     margin: 0px auto 0px auto;
     width: 100%;
-    padding:20px;
+    padding:50px;
     font-size:40px;
     text-align: center;
-    background-color: rgba(90, 83, 119, 0.582);
+    background-color: rgba(219, 197, 84, 0.75);
     color:#ffffff;
     
     letter-spacing: 2px;
@@ -412,8 +419,4 @@
   .icon-link img {
     width: 100%;
     vertical-align: top;
-  }
-  .icon-link--twitter {
-    left: auto;
-    right: 5px;
   }
