--- a/view/src/custom.css
+++ b/view/src/custom.css
@@ -8,7 +8,12 @@
   line-height: 50px;
 }
 
-
+.verticalElement {
+  justify-content: center;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+} 
 
 .header {
   overflow: hidden;
@@ -36,7 +41,7 @@
   width: 100%;
   padding:25px;
   text-align: center;
-  background-color: rgba(90, 83, 119, 0.75);
+  background-color: rgba(90, 83, 119, 1);
 }
 .about {
   width: 100%;
@@ -45,6 +50,15 @@
   text-align: center;
   background-color: #DBC554;
 }
+
+.fullscreen {
+  position: absolute;
+  left: 0;
+  top: 20vh;
+  width: 100%;
+  height: 100%;
+}
+
 .header.ready .heading {
   -webkit-transform: translateY(0);
           transform: translateY(0);
