--- a/view/public/index.html
+++ b/view/public/index.html
@@ -6,8 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The Society of Women Engineers at UT-Dallas"
     />
+    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
