--- a/view/public/index.html
+++ b/view/public/index.html
@@ -9,6 +9,10 @@
       content="The Society of Women Engineers at UT-Dallas"
     />
     <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
+    <link
+      rel="stylesheet"
+      href="https://video-react.github.io/assets/video-react.css"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
