--- a/view/public/index.html
+++ b/view/public/index.html
@@ -11,7 +11,7 @@
     <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
     <link
       rel="stylesheet"
-      href="https://video-react.github.io/assets/video-react.css"
+      href="../src/video-react.css"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
