--- a/view/src/styles/custom.css
+++ b/view/src/styles/custom.css
@@ -60,7 +60,7 @@ a:hover {
   top: 0px;
   width: 100%;
   text-align: center;
-  font-size: 16px;
+  font-size: 25px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
   -webkit-transition: all 0.75s 0.0s;
@@ -89,7 +89,16 @@ a:hover {
   top: 20vh;
   width: 100%;
   height: 100%;
+  text-align: center;
 }
+
+.howTo{
+
+  background: rgb(202,202,203);
+  background: linear-gradient(90deg, rgba(202,202,203,1) 8%, rgba(255,255,255,1) 50%, rgba(202,202,203,1) 93%);
+
+}
+
 
 .header.ready .heading {
   -webkit-transform: translateY(0);
