--- a/view/src/styles/App.css
+++ b/view/src/styles/App.css
@@ -22,6 +22,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  position:relative;
+  z-index: 1000;
 }
 
 .App-link {
